[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-automation-tool"
version = "1.3.0"
description = "Excel files automation processing tool"
readme = "README.md"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
license = {text = "MIT"}
keywords = ["excel", "automation", "processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "xlwt>=1.3.0",
    "numpy>=1.24.0",
    "packaging>=21.0"
]

[project.optional-dependencies]
gui = ["tkinter"]
dev = ["python-semantic-release"]

[project.urls]
Homepage = "https://github.com/user/excel-automation-tool"
Repository = "https://github.com/user/excel-automation-tool"
Issues = "https://github.com/user/excel-automation-tool/issues"

[tool.setuptools]
packages = ["excel_automation"]
include-package-data = true

[tool.setuptools.package-data]
excel_automation = ["*.py"]

# Auto-update configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "excel_automation_gui.py:__version__"
]
build_command = ""
upload_to_pypi = false
upload_to_repository = false
commit_message = "bump: version {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "main|master"
prerelease = false
